--- a/assignments/Assignment7/index.html
+++ b/assignments/Assignment7/index.html
@@ -29,7 +29,7 @@
             <li><a class="current" href="./index.html" >Home</a></li>
             <li><a href="">Rooms</a></li>
             <li><a href="./facalities.html">Facalities</a></li>>
-            <li> <a href=""><button class="bookbutton">Book Now</button></a></li>
+            <li> <a href="./book.html"><button class="bookbutton">Book Now</button></a></li>
           </ul>
         </div>
       </div>
@@ -146,8 +146,8 @@
           </label><br><br>
           <a href=""><button id="c-a">Check Availability</button></a>
         </form>
-      </div> -->
-    <!-- </div> -->
+      </div>
+    </div> -->
     <p style="color:#a55333;text-align: center;font-weight: 600; font-size: 2rem;" class="findUs">Find us</p>
     <div class="iframe">
       <iframe
@@ -184,7 +184,7 @@
           <li><a class="current" href="./index.html">Home</a></li>
           <li><a href="">Rooms</a></li>
           <li><a href="./facalities.html">Facalities</a></li>
-          <li> <a href=""><button class="bookbutton">Book Now</button></a></li>
+          <li> <a href="./book.html"><button class="bookbutton">Book Now</button></a></li>
         </ul>
       </div>
       <!-- <div class="newsletter">
