--- a/assignments/Assignment7/book.html
+++ b/assignments/Assignment7/book.html
@@ -27,7 +27,7 @@
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="">Rooms</a></li>
                         <li><a href="./facalities.html">Facalities</a></li>
-                        <li><a href="./book.html"><button class="bookbutton">Book Now</button></a></li>
+                        <li><a href="./book.html"><button class=" currentButton bookbutton">Book Now</button></a></li>
                     </ul>
                 </div>
             </div>
@@ -43,42 +43,34 @@
                         class="img-1"></div>
             </div>
         </div>
+            <p style="font-size: 2rem;color:#a55333;text-align: center;margin: 0px;padding: 0px;padding-top: 200px;">Book A Room</p>
         <div class="mid4">
-            <div class="mid4-1">
-              <p style="font-size: 2rem;color:#a55333;text-align: center;">Book A Room</p>
-              <img src="./images/slider/jorg-angeli-1tyuLfDOnG0-unsplash.jpg" style="width: 100%;" alt="">
-            </div>
-            <div class="mid4-2">
-              <form action="">
-                <label>
-                  
-                  <input type="text" placeholder="Check-In" id="Check-in"
-                          onfocus="(this.type='date')">
+              <form action="" style="padding-bottom: 200px;padding-top: 50px;">
+                <label>  
+                  <input type="date" placeholder="Check-In" id="Check-in" style="border: 2px solid #a55333; color:#3a1f14;">
                 </label><br><br>
                 <label>
                   
-                  <input type="text" placeholder="Check-Out" id="Check-out"
-                  onfocus="(this.type='date')">
+                  <input type="date" placeholder="Check-Out" id="Check-out" style="border: 2px solid #a55333; color:#3a1f14;">
                 </label><br><br>
                 <label>
-                  <select name="" id="roomType">
-                    <option value="" disabled selected>Select Room Type</option>
+                  <select name="" id="roomType" style="border: 2px solid #a55333; color:#3a1f14;">
+                    <option value="" disabled hidden selected>Select Room Type</option>
                     <option value="">Single</option>
                     <option value="">Double</option>
                     <option value="">Family</option>
                   </select>
                 </label><br><br>
                 <label>
-                  <select name="" id="roomClass">
-                    <option value="" disabled selected id="R-C">Select Room class</option>
+                  <select name="" id="roomClass" style="border: 2px solid #a55333 ; color:#3a1f14;">
+                    <option value="" disabled hidden selected id="R-C">Select Room class</option>
                     <option value="">Normal</option>
                     <option value="">Deulux</option>
                     <option value="">Super Deulux</option>
                   </select>
                 </label><br><br>
-                <a href=""><button id="c-a">Check Availability</button></a>
+                <a href=""><button id="c-a" style="color:#3a1f14;">Check Availability</button></a>
               </form>
-            </div>
           </div>
         <div class="newsletter"
         style="display:flex;text-align: center;flex-direction: column; background-color:#3a1f14 ; padding: 0%;margin: 0%;border: none;">
