--- a/assignments/Assignment7/book.html
+++ b/assignments/Assignment7/book.html
@@ -71,7 +71,7 @@
                                       <option value="">Super Deulux</option>
                                     </select><br><br>
                                 <label for="avalaibilitybut"></label> 
-                                <input type="button" value="Check Avalaibility"> 
+                                <input type="button" value="Check Avalaibility" id="avalaibilitybut"> 
                         </form>
                     </div>
                 </div>
