--- a/assignments/Assignment7/book.html
+++ b/assignments/Assignment7/book.html
@@ -27,7 +27,7 @@
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="">Rooms</a></li>
                         <li><a href="./facalities.html">Facalities</a></li>
-                        <li><a href="./book.html"><button class=" currentButton bookbutton">Book Now</button></a></li>
+                        <li><a href="./book.html#formcover"><button class=" currentButton bookbutton">Book Now</button></a></li>
                     </ul>
                 </div>
             </div>
@@ -44,7 +44,7 @@
             </div>
         </div>
             <!-- <p style="font-size: 2rem;color:#a55333;text-align: center;margin: 0px;padding: 0px;padding-top: 200px;">Book A Room</p> -->
-            <div class="formcover">
+            <div class="formcover" id="formcover">
                 <div class="innercover">
                     <div class="imagecover">
                         <img src="./formcover.jfif" alt="" class="imgform">
@@ -137,7 +137,7 @@
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="">Rooms</a></li>
                 <li><a href="./facalities.html">Facalities</a></li>
-                <li> <a href="./book.html"><button class="bookbutton">Book Now</button></a></li>
+                <li> <a href="./book.html#formcover"><button class="bookbutton">Book Now</button></a></li>
             </ul>
         </div>
         <div class="right" style="padding: 0%;margin: 0%;">
