--- a/assignments/Assignment7/facalities.html
+++ b/assignments/Assignment7/facalities.html
@@ -29,7 +29,7 @@
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="">Rooms</a></li>
                         <li><a class="current" href="./facalities.html">Facalities</a></li>
-                        <li> <a href="./book.html"><button class="bookbutton">Book Now</button></a></li>
+                        <li> <a href="./book.html#formcover"><button class="bookbutton">Book Now</button></a></li>
                     </ul>
                 </div>
             </div>
@@ -163,7 +163,7 @@
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="">Rooms</a></li>
                 <li><a class="current" href="./facalities.html">Facalities</a></li>
-                <li> <a href="./book.html"><button class="bookbutton">Book Now</button></a></li>
+                <li> <a href="./book.html#formcover"><button class="bookbutton">Book Now</button></a></li>
             </ul>
         </div>
         <div class="right" style="padding: 0%;margin: 0%;">
