--- a/assignments/Assignment7/index.html
+++ b/assignments/Assignment7/index.html
@@ -28,7 +28,7 @@
           <ul>
             <li><a class="current" href="./index.html" >Home</a></li>
             <li><a href="">Rooms</a></li>
-            <li><a href="./facalities.html">Facalities</a></li>>
+            <li><a href="./facalities.html">Facalities</a></li>
             <li> <a href="./book.html#formcover"><button class="bookbutton">Book Now</button></a></li>
           </ul>
         </div>
