--- a/assignments/Assignment7/book.html
+++ b/assignments/Assignment7/book.html
@@ -51,7 +51,7 @@
                     </div>
                     <div class="formlayout">
                         <form action="#">
-                            <p style="text-align: center;">Check for avalaibality</p>
+                            <p style="text-align: center;">Check For Avalaibality</p>
                             <label for="checkindate">Check-in Date</label><br>
                             <input type="datetime-local" name="checkindate" id="checkindate"><br><br>
                             <label for="checkoutdate">Check-out Date</label><br>
