--- a/assignments/Assignment7/index.html
+++ b/assignments/Assignment7/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="top">
       <div class="navbar">
-        <div class="logo"><span>The Welcome Mat</span></div>
+        <div class="logo"><a href="./index.html">The Welcome Mat</a></div>
         <input type="checkbox" id="check">
         <label for="check">
           <span class="toggle-button">
