--- a/Practice/index.html
+++ b/Practice/index.html
@@ -68,7 +68,11 @@
                     style="width: 200px;height: 200px;max-width:100%;"></a>
             <P style="text-align: center;color: honeydew;">form</P>
         </div>
-        
+        <div>
+            <a href="./quiz/index.html"> <img src="https://freesvg.org/img/blankYellowFolder.png" alt="folder icon"
+                    style="width: 200px;height: 200px;max-width:100%;"></a>
+            <P style="text-align: center;color: honeydew;">Quiz Application</P>
+        </div>
     </div>
 </body>
 
