--- a/Practice/quiz/index.html
+++ b/Practice/quiz/index.html
@@ -16,9 +16,9 @@
         <input type="button" value="Try Again" id="tryAgain" onclick="window.location.reload();">
         <div id="mcqsArea">
             <p id="question" multiple></p>
-            <input type="radio" name="answer" value="optionA" id="optionA"> <span id="optA"></span><br>
-            <input type="radio" name="answer" value="optionB" id="optionB"><span id="optB"></span><br>
-            <input type="radio" name="answer" value="optionC" id="optionC"><span id="optC"></span><br>
+            <input type="radio" name="answer" value="optionA" id="optionA" class="rad"> <span id="optA"></span><br>
+            <input type="radio" name="answer" value="optionB" id="optionB"class="rad"><span id="optB"></span><br>
+            <input type="radio" name="answer" value="optionC" id="optionC" class="rad"><span id="optC"></span><br>
             <input type="button" value="NexT" onclick="nextFunc()">
         </div>
     </div>
