--- a/Practice/quiz/index.html
+++ b/Practice/quiz/index.html
@@ -11,6 +11,7 @@
 <body>
     <div class="show">
         <input type="button" value="Strat Quiz" id="startQuiz" onclick="start()">
+        <p id="timer"></p>
         <p id="result"></p>
         <p id="status"></p>
         <input type="button" value="Try Again" id="tryAgain" onclick="window.location.reload();">
