--- a/Practice/quiz/index.html
+++ b/Practice/quiz/index.html
@@ -20,7 +20,7 @@
             <input type="radio" name="answer" value="optionA" id="optionA" class="rad"> <span id="optA"></span><br>
             <input type="radio" name="answer" value="optionB" id="optionB"class="rad"><span id="optB"></span><br>
             <input type="radio" name="answer" value="optionC" id="optionC" class="rad"><span id="optC"></span><br>
-            <input type="button" value="NexT" onclick="nextFunc()">
+            <input type="button" value="NexT" onclick="nextFunc()" id="next">
         </div>
     </div>
 </body>
