--- a/assignments/Assignment7/book.html
+++ b/assignments/Assignment7/book.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <title>Book Now</title>
 </head>
-<script src="./app.js"></script>
 <body>
     <div class="container">
         <div class="top">
@@ -47,24 +46,34 @@
             <!-- <p style="font-size: 2rem;color:#a55333;text-align: center;margin: 0px;padding: 0px;padding-top: 200px;">Book A Room</p> -->
             <div class="filter">
                 <form  onsubmit="return checkForm()" id="filter_form">
-                    <select name="category" id="category" style="height: 2.5rem;width: 19.7rem;border: none;outline: none;" >
-                        <option value="cat" hidden disabled>Select Your Category</option>
+                    <select required name="category" id="category" style="height: 2.5rem;width: 19.7rem;border: none;outline: none;" >
+                        <option value="cat" selected hidden disabled>Select Room Category</option>
                         <option value="single_room">Single Room</option>
                         <option value="double_room">Double Room</option>
                         <option value="family_room">Family Room</option>
                     </select>
-                    <select name="class" id="class" style="height: 2.5rem;width: 19.7rem;border: none;outline: none;">
+                    <select required name="class" id="class" style="height: 2.5rem;width: 19.7rem;border: none;outline: none;">
+                        <option value="cla" selected disabled hidden>Select Room Class</option>
                         <option value="Business_Class">Business Class</option>
                         <option value="First_Class">First Class</option>
                     </select>
-                    <input type="submit" id="search" value="Search" style="height: 2.5rem;width: 19.7rem;border: none;outline: none; color: #fff;font-weight: 550;">
-
+                    <input type="submit" id="search" value="Search" style="height: 2.5rem;width: 19.7rem;border: none;outline: none; color: #fff;font-weight: 550;"><br>
+                    <span id="error" ></span> 
                 </form>
             </div>
-            <div class="catresult">
-                <div class="sin"></div>
-                <div class="dou"></div>
-                <div class="fam"></div>
+            <div class="filterResult">
+                <table  id="filter_table">
+                    <tr>
+                        <th>ROOM TYPE</th>
+                        <th>ROOM CLASS</th>
+                        <th>AVALAIBILITY</th>
+                        <th>CAPACITY</th>
+                        <th>PRICE</th>
+                    </tr>
+                    <tbody id="myTable" >
+                    </tbody>
+                </table>
+                <button id="bn">Book Now</button>
             </div>
             <div class="formcover" id="formcover">
                 <div class="innercover">
@@ -183,5 +192,6 @@
     </div>
     </div>
     </div>
+<script src="./app.js"></script>
 </body>
 </html>
