--- a/assignments/Assignment7/book.html
+++ b/assignments/Assignment7/book.html
@@ -27,7 +27,7 @@
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="">Rooms</a></li>
                         <li><a href="./facalities.html">Facalities</a></li>
-                        <li><a href="./book.html#formcover"><button class=" currentButton bookbutton">Book Now</button></a></li>
+                        <li><a href="./book.html#filter_form"><button class=" currentButton bookbutton">Book Now</button></a></li>
                     </ul>
                 </div>
             </div>
@@ -73,7 +73,7 @@
                     <tbody id="myTable" >
                     </tbody>
                 </table>
-                <button id="bn">Book Now</button>
+                <button id="bn" onclick="onClick()" >Book Now</button>
             </div>
             <div class="formcover" id="formcover">
                 <div class="innercover">
@@ -168,7 +168,7 @@
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="">Rooms</a></li>
                 <li><a href="./facalities.html">Facalities</a></li>
-                <li> <a href="./book.html#formcover"><button class="bookbutton">Book Now</button></a></li>
+                <li> <a href="./book.html#filter_form"><button class="bookbutton">Book Now</button></a></li>
             </ul>
         </div>
         <div class="right" style="padding: 0%;margin: 0%;">
