--- a/assignments/Assignment7/index.html
+++ b/assignments/Assignment7/index.html
@@ -29,7 +29,7 @@
             <li><a class="current" href="./index.html" >Home</a></li>
             <li><a href="">Rooms</a></li>
             <li><a href="./facalities.html">Facalities</a></li>
-            <li> <a href="./book.html#formcover"><button class="bookbutton">Book Now</button></a></li>
+            <li> <a href="./book.html#filter_form"><button class="bookbutton">Book Now</button></a></li>
           </ul>
         </div>
       </div>
@@ -184,7 +184,7 @@
           <li><a class="current" href="./index.html">Home</a></li>
           <li><a href="">Rooms</a></li>
           <li><a href="./facalities.html">Facalities</a></li>
-          <li> <a href="./book.html#formcover"><button class="bookbutton">Book Now</button></a></li>
+          <li> <a href="./book.html#filter_form"><button class="bookbutton">Book Now</button></a></li>
         </ul>
       </div>
       <!-- <div class="newsletter">
